--- a/src/components/ThemeButton/ThemeButton.css
+++ b/src/components/ThemeButton/ThemeButton.css
@@ -60,29 +60,32 @@
   transition: 0.5s ease-in-out;
 }
 
-.dark-a {
+.dark-d {
   box-shadow: 0px 0px 2px 1px rgb(236, 236, 236);
 }
 
-.green-a {
+.green-d {
   box-shadow: 0px 0px 2px 1px rgb(16, 97, 14);
 }
 
-.skin-b {
+.skin-d {
   box-shadow: 0px 0px 2px 1px rgb(122, 44, 44);
 }
 
-.pink-c {
+.pink-d {
   box-shadow: 0px 0px 2px 1px rgb(220, 34, 173);
 }
-.yellow-g{
-  box-shadow: 0px 0px 2px 1px rgb(103, 61, 30);
+
+.yellow-d {
+  box-shadow: 0px 0px 2px 1px rgb(183, 165, 74);
 }
-.blue-f{
-  box-shadow: 0px 0px 2px 1px rgb(132, 221, 122);
+
+.blue-d {
+  box-shadow: 0px 0px 2px 1px rgb(93, 144, 210);
 }
+
 .purple-d {
-  box-shadow: 0px 0px 2px 1px rgb(110, 40, 110);
+  box-shadow: 0px 0px 2px 1px rgb(105, 68, 161);
 }
 
 .theme-container * {
